sort.basic.lessons.sort.basic.comb.AlgCombSort11.scala.error
AlgCombSort11:9: error: value || is not a member of Unit
      if ((ecart=9)||(ecart=10)){
                   ^